...
    private lazy var startDatePicker = createDatePicker()
    private lazy var endDatePicker = createDatePicker()
    private lazy var startTimePicker = createTimePicker()
    private lazy var endTimePicker = createTimePicker()
    private lazy var allDaySwitch = createSwitch()
    private lazy var notificationSwitch = createSwitch()
    private let nameTextField = UITextField()
    private let descriptionTextField = UITextField()
    private let deleteButton = UIButton()
    //MARK: - Support
    private let notificationManager: NotificationManagerProtocol
    private let viewModel: MakeEventViewModelProtocol
    //MARK: - State
    var onUpdate: (() -> Void)?
    var onChange: (() -> Void)?
...
        )
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            barButtonSystemItem: .save,
            target: self,
            action: #selector(rightBarButtonItemTapped)
        )
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "saveButton"
        navigationItem.rightBarButtonItem?.isEnabled = false
    }
    
    func configure(with event: Event) {
        nameTextField.text = event.name
        startDatePicker.date = event.startDate
...
