...
        view.addSubview(label)
        let barbuttonitem = UIBarButtonItem(customView: view)
        barbuttonitem.accessibilityIdentifier = "\(label.text ?? "")"
        navigationItem.leftBarButtonItem = barbuttonitem
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addTaped))
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "addEventButton"
    }
    //MARK: - Helpers
    func bindViewModel() {
        viewModel.onUpdate = { [weak self] state in
            self?.controllers = state.years.map({ yearModel in
                YearViewController(months: yearModel.months, year: yearModel.year)
...
