...
            let lineView = UIView()
            lineView.backgroundColor = Constants.lineColor
            let hourLabel = UILabel()
            hourLabel.text = hours[i]
            hourLabel.textColor = Constants.labelColor
            lineView.translatesAutoresizingMaskIntoConstraints = false
            lineView.accessibilityIdentifier = "line"
            hourLabel.translatesAutoresizingMaskIntoConstraints = false
            contentView.addSubview(lineView)
            contentView.addSubview(hourLabel)
            
            NSLayoutConstraint.activate([
                hourLabel.leadingAnchor.constraint(equalTo: contentView.leadingAnchor, constant: Constants.labelLeftPadding),
...
